<resources>
    <string name="app_name">Generatore Codice Fiscale</string>
    <string name="start_message">Calcolare Codice Fiscale</string>
    <string name="start_button">Vai</string>
    <string name="request">Inserire Dati</string>
    <string name="surname">Cognome</string>
    <string name="name">Nome</string>
    <string name="Birthplace">Luogo di Nascita</string>
    <string name="acronym">Provincia</string>
    <string name="date">gg/mm/aaaa</string>
    <string name="maschio">M</string>
    <string name="femmina">F</string>
    <string name="button_calculate">Calcola</string>
</resources>