<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".CalculateActivity"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/request"
        android:textSize="15sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="11dp"
        android:hint="@string/surname"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:hint="@string/name"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:textStyle="normal"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp">

        <RadioButton
            android:id="@+id/radioButtonM"
            android:onClick="btclick"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/maschio"/>

        <RadioButton
            android:id="@+id/radioButtonF"
            android:onClick="btclick"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/femmina"/>

    </RadioGroup>

    <EditText
        android:id="@+id/editTextBirthPlace"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="11dp"
        android:hint="@string/Birthplace"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:inputType="textPersonName"
        android:textStyle="normal"/>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">

        <EditText
            android:id="@+id/editTextCounty"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/acronym"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:textStyle="normal"/>

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginLeft="69dp"
            android:hint="@string/date"
            android:textSize="20sp"
            android:inputType="date"
            android:textStyle="normal"/>

    </LinearLayout>



    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/button_calculate"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"/>


    <TextView
        android:id="@+id/textViewCF"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:textStyle="normal"/>



</LinearLayout>